# KittehPlayer

./: .clang-format  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  DOCS.md  KittehPlayer-Wrapper  KittehPlayer.desktop  KittehPlayer.pro  README.md  cmake_install.cmake  format-code.sh  kittehplayer_sv_se  qml_qmlcache.qrc.depends  qrc_qml_qmlcache.cpp  tmp
KittehPlayer_autogen/: mocs_compilation.cpp
scripts/: build-deps.sh  build-mpv.sh  makeappimage.sh  rendersvgs.sh  upload.sh
src/: DirectMpvPlayerBackend.cpp  DirectMpvPlayerBackend.h  MpvPlayerBackend.cpp  MpvPlayerBackend.h  Process.cpp  Process.h  ThumbnailCache.cpp  ThumbnailCache.h  backendinterface.hpp  enums.cpp  enums.hpp  logger.cpp  logger.h  main.cpp  qmldebugger.cpp  qmldebugger.h  qthelper.hpp  registerTypes.cpp  setenv_mingw.hpp  utils.cpp  utils.hpp
src/Backends/DirectMPV/: DirectMPVBackend.cpp  DirectMPVBackend.hpp
src/Backends/MPV/: MPVBackend.cpp  MPVBackend.hpp
src/Backends/MPVCommon/: MPVCommon.cpp  MPVCommon.hpp
src/Backends/MPVNoFBO/: MPVNoFBOBackend.cpp  MPVNoFBOBackend.hpp
src/qml/: AudioDeviceItem.qml  ChapterMarker.qml  ControlsBar.qml  CustomComboBox.qml  CustomMenu.qml  CustomMenuItem.qml  MainMenu.qml  NiconicoButtonLayout.qml  PlaylistDialog.qml  RoosterTeethButtonLayout.qml  SubtitlesBar.qml  TrackItem.qml  Translator.qml  YouTubeButtonLayout.qml  main.qml  qml.qrc  qml.qrc.depends  translations.js
src/qml/Dialogs/: DebugDialog.qml  PlaylistDialog.qml  SettingsDialog.qml
src/qml/Dialogs/SettingsItems/: LanguageSettings.qml
src/qml/Items/: AudioDeviceItem.qml  ChapterMarkerItem.qml  CustomMenuItem.qml  ThumbnailProcess.qml  TitleProcess.qml  TrackItem.qml
src/qml/UIComponents/: .VolumeButton.qml.kate-swp  BackwardButton.qml  ButtonImage.qml  ForwardButton.qml  FullscreenButton.qml  MenuTitleBar.qml  PlayPauseButton.qml  PlaylistNextButton.qml  PlaylistPrevButton.qml  SettingsButton.qml  SmoothButton.qml  SpeedText.qml  TimeLabel.qml  VerticalVolume.qml  VideoProgress.qml  VolumeButton.qml  VolumeSlider.qml
src/qml/UIComponents/Controls/: BackwardButton.qml  PlayPauseButton.qml  VideoProgress.qml
src/qml/UIComponents/ControlsBar/: ControlsBar.qml
src/qml/UIComponents/ControlsLayouts/: RoosterTeethButtonLayout.qml
src/qml/UIComponents/MenuBar/: MainMenu.qml  MenuTitleBar.qml
src/qml/Utils/: Translator.qml  translations.js
